force-app/main/default/objects/Calendar_User_Preference__c/Calendar_User_Preference__c.object-meta.xml
<CustomObject>
    <description>Per-user Team Calendar Board layout and feature visibility preferences.</description>
    <label>Calendar User Preference</label>
    <nameField>
        <displayFormat>CUP-{00000}</displayFormat>
        <label>Calendar User Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>