force-app/main/default/objects/Calendar_User_Preference__c/fields/Allowed_Selected_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Selected_User_Ids__c</fullName>
    <description>JSON array of approved user Ids the target user can see in the Selected Users picker.</description>
    <label>Allowed Selected User Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>