force-app/main/default/objects/Calendar_User_Preference__c/fields/Auto_Expand_Day_Height__c.field-meta.xml
<CustomField>
    <fullName>Auto_Expand_Day_Height__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Expand Day Height</label>
    <type>Checkbox</type>
</CustomField>