force-app/main/default/objects/Calendar_User_Preference__c/fields/Color_Overrides__c.field-meta.xml
<CustomField>
    <fullName>Color_Overrides__c</fullName>
    <description>JSON map of per-user calendar color overrides.</description>
    <label>Color Overrides</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>