force-app/main/default/objects/Calendar_User_Preference__c/fields/Compact_Event_Density__c.field-meta.xml
<CustomField>
    <fullName>Compact_Event_Density__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compact Event Density</label>
    <type>Checkbox</type>
</CustomField>