force-app/main/default/objects/Calendar_User_Preference__c/fields/Default_Calendar_View_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Calendar_View_Id__c</fullName>
    <label>Default Calendar View Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>