force-app/main/default/objects/Calendar_User_Preference__c/fields/Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Status__c</fullName>
    <label>Default Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>