force-app/main/default/objects/Calendar_User_Preference__c/fields/Default_View__c.field-meta.xml
<CustomField>
    <fullName>Default_View__c</fullName>
    <label>Default View</label>
    <length>40</length>
    <type>Text</type>
</CustomField>