force-app/main/default/objects/Calendar_User_Preference__c/fields/Show_Filter_Controls__c.field-meta.xml
<CustomField>
    <fullName>Show_Filter_Controls__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Filter Controls</label>
    <type>Checkbox</type>
</CustomField>