force-app/main/default/objects/Calendar_User_Preference__c/fields/Show_Prev_Next_Buttons__c.field-meta.xml
<CustomField>
    <fullName>Show_Prev_Next_Buttons__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Prev Next Buttons</label>
    <type>Checkbox</type>
</CustomField>