force-app/main/default/objects/Calendar_User_Preference__c/fields/Show_Refresh_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Refresh_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Refresh Button</label>
    <type>Checkbox</type>
</CustomField>