force-app/main/default/objects/Calendar_User_Preference__c/fields/Show_Select_Users_Box__c.field-meta.xml
<CustomField>
    <fullName>Show_Select_Users_Box__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Select Users Box</label>
    <type>Checkbox</type>
</CustomField>