force-app/main/default/objects/Calendar_User_Preference__c/fields/Show_Sync_Panel__c.field-meta.xml
<CustomField>
    <fullName>Show_Sync_Panel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Sync Panel</label>
    <type>Checkbox</type>
</CustomField>