force-app/main/default/objects/Calendar_User_Preference__c/fields/Show_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Show_Weekends__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Weekends</label>
    <type>Checkbox</type>
</CustomField>