force-app/main/default/objects/Calendar_User_Preference__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Calendar User Preferences</relationshipLabel>
    <relationshipName>CalendarUserPreferences</relationshipName>
    <type>Lookup</type>
</CustomField>