force-app/main/default/objects/Calendar_User_Preference__c/fields/Wrap_Event_Titles__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Event_Titles__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wrap Event Titles</label>
    <type>Checkbox</type>
</CustomField>